--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 		<hr>
 	</header>
 	<div id="content">
-		<%= @post.content %>
+		<%= markdown @post.content %>
 	</div>
 	<hr>
 	<div id="share_box">
@@ -21,7 +21,7 @@
 	<hr>
 </div>
 
-<!-- 
 
 <%= link_to "Edit", edit_post_path(@post) %>
+<!-- 
 <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm:"Вы уверенны?"} %> -->
