--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,10 +15,9 @@
 		<a onclick="javascript:window.open('http://facebook.com/sharer.php?u=<%= url_for([@post, {only_path:false}])%>','_blank', 'width=800, height=500, top=200, left=300'); void(0);"><i class="fa fa-facebook-square"></i></a>
 
 		<a onclick="javascript:window.open('http://vk.com/share.php?url=<%= url_for([@post, {only_path:false}])%>','_blank', 	'width=800, height=500, top=200, left=300'); void(0);"><i class="fa fa-vk"></i></a>
-		
-		
 	</div>
 	<hr>
+	<%=render 'disqus' %>
 </div>
 
 
